datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  BUYER
  SELLER
}

model Users {
  id               String   @id @default(uuid())
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  name             String
  confirmationOTP  String
  isEmailConfirmed Boolean
  otpExpiryTime    DateTime
  email            String
  password         String?
  role             Role     @default(BUYER)

  @@unique([email])
}

model Products {
  id           String     @id @default(uuid())
  createdAt    DateTime?  @default(now())
  updatedAt    DateTime?  @updatedAt
  productName  String
  description  String
  price        String
  brand        Brands     @relation(fields: [brandsId], references: [id])
  category     Categories @relation(fields: [categoriesId], references: [id])
  rating       Int?
  review       String?
  // image        String  // TODO: Image to be added
  brandsId     String
  categoriesId String
}

model Categories {
  id           String     @id @default(uuid())
  createdAt    DateTime?  @default(now())
  categoryName String
  Products     Products[]
}

model Brands {
  id        String     @id @default(uuid())
  createdAt DateTime?  @default(now())
  brandName String
  Products  Products[]
}
