//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Users {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  confirmationOTP String [not null]
  isEmailConfirmed Boolean [not null]
  otpExpiryTime DateTime [not null]
  email String [unique, not null]
  password String
  role Role [not null, default: 'BUYER']
}

Table Products {
  id String [pk]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  productName String [not null]
  description String [not null]
  price String [not null]
  brand Brands [not null]
  category Categories [not null]
  rating Int
  review String
  brandsId String [not null]
  categoriesId String [not null]
}

Table Categories {
  id String [pk]
  createdAt DateTime [default: `now()`]
  categoryName String [not null]
  Products Products [not null]
}

Table Brands {
  id String [pk]
  createdAt DateTime [default: `now()`]
  brandName String [not null]
  Products Products [not null]
}

Enum Role {
  BUYER
  SELLER
}

Ref: Products.brandsId > Brands.id

Ref: Products.categoriesId > Categories.id